Fix spacing issues on sign-up page
- Add 16px margin-bottom to input fields
- Add 12px margin-top to submit button
- Ensure consistent spacing between form elements

--- a/src/screens/SignUp/SignUp.module.sass
+++ b/src/screens/SignUp/SignUp.module.sass
@@ -96,3 +96,10 @@
 
 .title
     margin-bottom: 32px
+
+.field
+    margin-bottom: 16px
+
+.button
+    margin-top: 12px
+    width: 100%
